Add comprehensive tests for class mocking support: covers concrete classes, final/static/final-method cases, toString, and updates/removes obsolete tests. All tests pass. Update CHANGELOG.md.